# dots-family-mode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  DAEMON_SERVICE_COMPLETION.md  DEPLOYMENT_SUCCESS.md  GUI_PROGRESS.md  LICENSE  MULTI_STAGE_BUILD.md  PRODUCTION_TEST_RESULTS.md  PROJECT_STATUS.md  PUBLISH.md  README.md  READY_FOR_PUBLISHING.md  RELEASE.md  SESSION2_COMPLETE.md  SESSION3_SUMMARY.md  SESSION4_RESULTS_INCORRECT.md  SESSION_SUMMARY.md  TESTING_CHECKLIST.md  VM_TESTING_GUIDE.md  VM_TESTING_RESULTS.md  VM_TEST_EXECUTION_REPORT.md  VM_TEST_STRATEGY.md  build-output.txt  cargo-tree-hyper.txt  cargo-tree-tokio-util.txt  cargo-tree-tokio.txt  channel-rust-nightly.toml  deny.toml  ebpf-result  flake.nix  package-lock.json  sqlx_cache_gen.db  test.db  test_real_ebpf.sh  vm-advanced-integration-test.sh  vm-config-hyprland.nix  vm-config-niri.nix  (+8 more)
crates/dots-family-common/: Cargo.toml  README.md
crates/dots-family-common/src/: config.rs  error.rs  lib.rs  security.rs  time_window.rs  types.rs
crates/dots-family-ctl/: Cargo.toml
crates/dots-family-ctl/src/: auth.rs  main.rs
crates/dots-family-ctl/src/commands/: approval.rs  check.rs  mod.rs  profile.rs  report.rs  session.rs  status.rs  time_window.rs
crates/dots-family-daemon/: Cargo.toml  build.rs
crates/dots-family-daemon/src/: behavior_analyzer.rs  config.rs  daemon.rs  dbus_communication_test.rs  dbus_impl.rs  ebpf_event_processor.rs  edge_case_handler.rs  enforcement.rs  lib.rs  main.rs  monitoring_service.rs  notification_manager.rs  policy_engine.rs  profile_manager.rs  reports.rs  session_manager.rs  time_window_enforcement_task.rs  time_window_manager.rs
crates/dots-family-daemon/src/ebpf/: disk_io_monitor.rs  filesystem_monitor.rs  memory_monitor.rs  mod.rs  network_monitor.rs  process_monitor.rs  process_monitor.rs.backup  process_monitor_simple.rs
crates/dots-family-daemon/tests/: activity_reporting_test.rs  database_integration_test.rs  dbus_methods_test.rs  ebpf_integration_test.rs  ebpf_integration_test.rs.disabled  exception_creation_test.rs  filesystem_monitor_ebpf_test.rs.disabled  integration_test.rs  mock_daemon.rs.disabled  network_monitor_ebpf_test.rs.disabled  process_monitor_ebpf_test.rs  report_generation_test.rs  simple_integration_test.rs  time_window_configuration_test.rs
crates/dots-family-db/: Cargo.toml
crates/dots-family-db/.sqlx/: query-1599f02841185ce0ce3b4530c65c8969d5f6fce8d6b5dfd60b297b4add136ffe.json  query-2897a3c51bf22477a93b5169473097b0506a6949fbfc12bcd9f7c4c57bece4a7.json  query-293c59fa1dfa6b409e0da31ad297acba3102b0a277f16972eb9001ce77c42d8a.json  query-2a130b89da15b54e4332e425649556ec23fa321ed9f9bbf306f74c243709b3bc.json  query-2fb935af6271947edf90f65488aed5c0d11d795dc0f834bc8ed391ccf4987a99.json  query-4f7228feb3280d7c6aa3af17a263e48140025ea80f57dee81b4ddcd368e3139c.json  query-5b7f4950ef7e39a213469f11fcf36cf4bc0c1ed5f0fb7e241c1d126664f9a76a.json  query-5fd61e53b5e2b85d28fd485b08f289adee681730dd7b2176461491b46eb7dfc9.json  query-6ff40ae5a08dfe08253f3b7c48ae9dd4b5bee7888431f44eafa5173f348a3389.json  query-7f2a004d12cfd38a1408949cc4c6331a478b13de97d08fa76f1f6c86d428b96d.json  query-801f1b0cd554213d1badf74536a365797bdc2e9d02f0432bf73881058e71f697.json  query-8cb09a68cb73e6e422894abbe5e672dce943f1bfdf44494e6faabce116895e7b.json  query-965cee28ef4d8f76b5d0b43e3149f1bfcf9b67be55381db7a7caf1ba44b2fb76.json  query-9991eb4a7350110736a3f5838b6859c54935182252bf77e5ff0d1777455a197a.json  query-9f2aaed306859f500fbc8ee6010840fadc63de4f565376fa8aaa887af30eca6a.json  query-ba1b08e087b2a1331d56313a3d8fa21e897ed6b11510c50447858425be2a1647.json  query-e68f464c2d08d8118af0afc13999ae8e071feee13ccff724dc82b5cd8b2c32a1.json  query-ed79778b6d2bfa54637dc8437cc6138a8432728f12af8fa11f25939defb6e975.json  query-fb85d3a55c01626ff098682d9a136c3d4e08e3ab00a33175c2bd24e60f88e1ec.json
crates/dots-family-db/migrations/: 20260124000000_add_username_to_profiles.sql  20260126022200_phase3_ebpf_metrics.sql
crates/dots-family-db/src/: connection.rs  error.rs  lib.rs  migrations.rs  models.rs
crates/dots-family-db/src/queries/: activities.rs  app_info_cache.rs  approval_requests.rs  audit.rs  custom_rules.rs  daily_summaries.rs  ebpf_metrics.rs  events.rs  exceptions.rs  filter_lists.rs  filter_rules.rs  mod.rs  network_activity.rs  policy_cache.rs  policy_versions.rs  profiles.rs  sessions.rs  terminal.rs  terminal_activity.rs  weekly_summaries.rs
crates/dots-family-db/tests/: migration_test.rs
crates/dots-family-filter/: Cargo.toml
crates/dots-family-filter/src/: certificate_manager.rs  config.rs  filter_engine.rs  lib.rs  main.rs  proxy.rs  rules.rs  shuttle.rs
crates/dots-family-filter/tests/: mitm_integration.rs
crates/dots-family-gui/: Cargo.toml
crates/dots-family-gui/src/: app.rs  daemon_client.rs  lib.rs  main.rs
crates/dots-family-gui/src/components/: approval_request_card.rs  mod.rs  sidebar_row.rs
crates/dots-family-gui/src/state/: mod.rs  profile_store.rs
crates/dots-family-gui/src/views/: approval_requests.rs  (+9 more)
crates/dots-family-monitor/: Cargo.toml
crates/dots-family-monitor/src/: config.rs  daemon_client.rs  lib.rs  main.rs  monitor.rs  wayland.rs
crates/dots-family-monitor/tests/: dbus_integration_test.rs
crates/dots-family-proto/: Cargo.toml
crates/dots-family-proto/src/: daemon.rs  daemon.rs.backup  events.rs  lib.rs  monitor.rs
crates/dots-terminal-filter/: Cargo.toml
crates/dots-terminal-filter/src/: command_parser.rs  config.rs  educational.rs  integration_tests.rs  lib.rs  main.rs  risk_analyzer.rs  script_inspector.rs  shell_wrapper.rs
crates/dots-wm-bridge/: Cargo.toml
crates/dots-wm-bridge/src/: detection.rs  lib.rs  main.rs  types.rs
crates/dots-wm-bridge/tests/: adapter_functionality_test.rs  multi_wm_switching_test.rs
dots-family-ebpf/: Cargo.toml  rust-toolchain.toml
dots-family-ebpf/src/: filesystem-monitor.rs  network-monitor.rs  process-monitor.rs
tests/bdd/: Cargo.toml  test_output.txt  test_results.txt
tests/bdd/src/: lib.rs  steps.rs  world.rs
tests/bdd/tests/: time_windows.rs
(+412 files in other folders)
