[package]
name = "dots-family-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Common types, errors, and utilities for DOTS Family Mode"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
secrecy.workspace = true
sha2.workspace = true
ring.workspace = true
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
