[package]
name = "dots-family-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DOTS Family Mode component"

[dependencies]
dots-family-proto.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
zbus.workspace = true
serde_json.workspace = true
rpassword = "7.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
