[package]
name = "dots-family-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol definitions and DBus interfaces for DOTS Family Mode"

[dependencies]
dots-family-common.workspace = true
serde.workspace = true
serde_json.workspace = true
zbus.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
