[package]
name = "dots-terminal-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DOTS Family Mode component"

[[bin]]
name = "dots-terminal-filter"
path = "src/main.rs"

[dependencies]
dots-family-common.workspace = true
dots-family-proto.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zbus = { workspace = true }
regex = "1.10"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
fastrand = "2.0"
thiserror = "1.0"
md5 = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
